fix: text overflow for profile section

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -5,6 +5,9 @@
   line-height: 1.33;
   font-size: 42px;
   grid-area: name;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 432px) {
