--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -5,4 +5,7 @@
   line-height: 1.22;
   font-size: 18px;
   grid-area: occupation;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
